[package]
name = "flusty-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = { version = "2.0.16", features = ["full", "extra-traits"] }
